Fix wrapping

--- a/index.css
+++ b/index.css
@@ -35,7 +35,7 @@ input {
 
 #three {
 	font-family: Arial, Helvatica, sans-serif;
-	width: 70em;
+	width: 80%;
 	word-wrap: break-word;
 }
 
